MacViews: Be robust against Views manipulating Layers during Widget::Close().

An InkDropHostView may manipulate layers in response the Widget::Hide().
A Hide() occurs synchronously in Widget::Close(), followed by tear down
that occurs asynchronously. Mac's BridgedNativeWidget (and
aura::Window::~Window()) suppress repaints during a close.
BridgedNativeWidget does this by clearing out the compositor. We
shouldn't try to subsequently recreate the compositor (there's a DCHECK
for that).

Manipulating Layers may call Widget::ReorderNativeViews. And
NativeWidgetMac::ReorderNativeViews() currently calls
BridgedNativeWidget::SetRootView() (which updates the compositor). It's
done this since before ReorderChildViews() was implemented, but it's no
longer necessary. It should always be a no-op: the RootView can't
change.

BUG=673991, 674003

Review-Url: https://codereview.chromium.org/2577593002
Cr-Commit-Position: refs/heads/master@{#438653}

Former-commit-id: c8701123a47788c2dcd15f957ac02492d1138fa4