ui/views/widget/native_widget_mac.mm
@@ -197,10 +197,8 @@ const ui::Layer* NativeWidgetMac::GetLayer() const {
 }
 
 void NativeWidgetMac::ReorderNativeViews() {
-  if (bridge_) {
-    bridge_->SetRootView(GetWidget()->GetRootView());
+  if (bridge_)
     bridge_->ReorderChildViews();
-  }
 }
 
 void NativeWidgetMac::ViewRemoved(View* view) {
